--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -13,7 +13,7 @@
 
 <h1>Juggling in Pittsburgh</h1>
 
-<p>Where to juggle in Pittsburgh (last updated 2015-03-01):</p>
+<p>Where to juggle in Pittsburgh (last updated 2017-10-27):</p>
 <ul style="">
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
     Meeting Sundays 3-5pm and Thursdays evening on or near the CMU campus. In nice summer weather, Thursday meetings are typically outside on the cut in front of Purnell and Sunday meetings are on Schenley Plaza in front of the Carnegie Library; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Wednesday meeting is in a changing location on campus. Growing group of students and nonstudents. See news section on the website or join mailing list for room announcements and short-term updates. <br />
@@ -57,6 +57,7 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li>Lincoln, NE - Lincoln City Jugglers, 04.12.2013</li>
     <li>Ames, IA - ISU Juggling and Unicycling Club, 04.12.2013</li>
     <li>Lincoln, NE - Lincoln City Jugglers, 11.11.2015</li>
+    <li>Seattle, WA - Cascade Jugglers, 16.11.2016</li>
 </ul>
 <p>(did some passing in all those clubs)</p>
 
@@ -129,18 +130,30 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">22.10.2016 - 23.10.2016</span>  <span class="where">Philadelphia, PA</span> (<a href="http://www.phillyjugglers.com/philly-fest">Philly Fest</a>)</li>
     <li><span class="datum">28.10.2016 - 30.10.2016</span>  <span class="where">St. Louis, MO</span> (<a href="https://www.facebook.com/events/1056047587764237/">St. Louis Jugglefest</a>)</li>
     <li><span class="datum">27.12.2016 - 02.01.2017</span>  <span class="where">Cambridge</span> (Pass-Out)</li>
-    <li><span class="datum">13.01.2017 - 15.02.2017</span>	<span class="where">Madison, WI</span> (<a href="http://madjugglers.com/MadFest">The 47th Annual MadFest Juggling Festival</a>)</li>
+    <li><span class="datum">13.01.2017 - 15.01.2017</span>	<span class="where">Madison, WI</span> (<a href="http://madjugglers.com/MadFest">The 47th Annual MadFest Juggling Festival</a>)</li>
     <li><span class="datum">03.02.2017 - 05.02.2017</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals">39th Annual Groundhog Day Jugglers Festival</a>)</li>
     <li><span class="datum">10.02.2017 - 12.02.2017</span>	<span class="where">St. Paul, MI</span> (<a href="http://mondofest.org/">Mondo XXVIII Festival</a>)</li>
     <li><span class="datum">07.04.2017 - 09.04.2017</span>  <span class="where">Rochester, NY</span> (<a href="http://ritjuggle.blogspot.com/">The 40th RIT Spring Juggle-In</a>)</li>
     <li><span class="datum">20.05.2017</span>	<span class="where">Charlottesville, VA</span> (<a href="http://juggler.bz/convention/index.htm">Jugglethon 2017</a>)</li>
+    <li><span class="datum">10.07.2017 - 16.07.2017</span>	<span class="where">Cedar Rapids, IA</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
+    <li><span class="datum">22.07.2017 - 30.07.2017</span>  <span class="where">Lublin, Poland</span> (<a href="http://ejc2017.org/">ECJ 2017</a>)</li>
+    <li><span class="datum">22.09.2017 - 24.09.2017</span>  <span class="where">Cambridge, MA</span> (<a href="http://web.mit.edu/juggle/www/juggleMIT.html">JuggleMIT</a>)</li>
+    <li><span class="datum">29.09.2017 - 01.10.2017</span>  <span class="where">Portland, OR</span> (<a href="https://www.portlandjugglers.org/">Portland Juggling Festival XXV</a>)</li>
+    <li><span class="datum">02.10.2017 - 07.10.2017</span>  <span class="where">Vashon Island, WA</span> (Pass-Out)</li>
+    <li><span class="datum">20.10.2017 - 22.10.2017</span>  <span class="where">St. Louis, MO</span> (<a href="https://www.facebook.com/events/344201889336184/">St. Louis Jugglefest</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">10.07.2017 - 16.07.2017</span>	<span class="where">Cedar Rapids, IA</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
-    <li><span class="datum">22.07.2017 - 30.07.2017</span>  <span class="where">Lublin, Poland</span> (<a href="http://ejc2017.org/">ECJ 2017</a>)</li>
+    <li><span class="datum">10.11.2017 - 12.11.2017</span>  <span class="where">Wilkinsburg, PA</span> (<a href="http://bit.ly/fluggleburgh">FluggleBurgh</a>)</li>
+    <li><span class="datum">27.12.2017 - 03.01.2018</span>	<span class="where">Koenigswiesen</span> (Pass-Out)</li>
+    <li><span class="datum">??.01.2018 - ??.01.2018</span>	<span class="where">Madison, WI</span> (<a href="http://madjugglers.com/MadFest">The 48th Annual MadFest Juggling Festival</a>)</li>
+    <li><span class="datum">02.02.2018 - 04.02.2018</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals">40th Annual Groundhog Day Jugglers Festival</a>)</li>
+    <li><span class="datum">16.02.2018 - 18.02.2018</span>	<span class="where">St. Paul, MI</span> (<a href="http://mondofest.org/">Mondo XXIX Festival</a>)</li>
+    <li><span class="datum">23.02.2018 - 25.02.2018</span>  <span class="where">Austin, TX</span> (<a href="http://juggling.place.org/jugglefest/">Austin Jugglefest XXV</a>)</li>
+    <li><span class="datum">06.04.2018 - 08.04.2018</span>  <span class="where">Rochester, NY</span> (<a href="http://ritjuggle.blogspot.com/">The 41th RIT Spring Juggle-In</a>)</li>
+    <li><span class="datum">28.07.2018 - 05.08.2018</span>  <span class="where">S. Miguel, Azores</span> (<a href="http://ejc2018.org/">ECJ 2018</a>)</li>
     <li><span class="datum">03.08.2019 - 11.08.2019</span>  <span class="where">Newark, UK</span> (<a href="http://ejc2019.org/">ECJ 2019</a>)</li>
 </ul>
 
