--- a/src/main/site/concerts.xhtml
+++ b/src/main/site/concerts.xhtml
@@ -563,17 +563,15 @@
 <li><span class="datum">03.08.2015</span>	<span class="band">Death from Above 1976</span> (Support <span class="band">The Bots</span>); Pittsburgh - Altar Bar; 15 USD</li>
 <li><span class="datum">22.08.2015</span>	<span class="band">Beach House</span> (Support <span class="band">Romanic States</span>); Pittsburgh - Mr. Smalls; 30.13 USD</li>
 <li><span class="datum">16.03.2016</span>	<span class="band">Shearwater</span> (Support <span class="band">Laura Gibson</span>); Pittsburgh - Club Cafe; 19.13 USD</li>
+<li><span class="datum">19.03.2016</span>	<span class="band">Vicky Chow &amp; Tristan Perich</span>; Pittsburgh - Andy Warhol Museum; 12 USD</li>
+<li><span class="datum">16.04.2016</span>	<span class="band">Dawn of Midi</span>; Pittsburgh - Andy Warhol Museum; 12 USD</li>
+<li><span class="datum">25.07.2016</span>	<span class="band">Daugther</span> (Support <span class="band">Julien Baker</span>); Pittsburgh - Mr. Smalls; 25 USD</li>
+<li><span class="datum">12.09.2016</span>	<span class="band">Angel Olsen</span> (Support <span class="band">Alex Cameron</span>); Pittsburgh - Mr. Smalls; 25 USD</li>
+<li><span class="datum">25.01.2017</span>	<span class="band">Mogwai</span>; Pittsburgh - Carnegie Music Hall of Homestead; 35 USD</li>
+<li><span class="datum">12.03.2018</span>	<span class="band">Godspeed You! Black Emperor</span> (Support <span class="band">Tashi Dorji and Liberty</span>); New York City - Brooklyn Steel; 35 USD</li>
+<li><span class="datum">15.03.2018</span>	<span class="band">Nils Frahm</span>; New York City - Knockdown Center; 35 USD</li>
 </ul>
 
-<h2>Future</h2>
-
-
-
-<p>Current plans for concerts to come...<br />
-
-see <a href="http://www.last.fm/user/christianwebuni/events/">http://www.last.fm/user/christianwebuni/events/</a>
-</p>
- 
 
 
 
