--- a/src/main/site/concerts.xhtml
+++ b/src/main/site/concerts.xhtml
@@ -570,6 +570,12 @@
 <li><span class="datum">25.01.2017</span>	<span class="band">Mogwai</span>; Pittsburgh - Carnegie Music Hall of Homestead; 35 USD</li>
 <li><span class="datum">12.03.2018</span>	<span class="band">Godspeed You! Black Emperor</span> (Support <span class="band">Tashi Dorji and Liberty</span>); New York City - Brooklyn Steel; 35 USD</li>
 <li><span class="datum">15.03.2018</span>	<span class="band">Nils Frahm</span>; New York City - Knockdown Center; 35 USD</li>
+<li><span class="datum">16.05.2018</span>	<span class="band">Godspeed You! Black Emperor</span> (Support <span class="band">KDG</span>); New York City - Brooklyn Steel; 30.13 USD</li>
+<li><span class="datum">10.08.2018</span>	<span class="band">Black Moth Super Rainbow</span> (Support <span class="band">The Stargazer Lilies</span>, <span class="band">Air Credits</span>); Pittsburgh - Mr. Small's; 20 USD</li>
+<li><span class="datum">26.08.2018</span>	<span class="band">Efrim Manuel Menuck</span> (Support <span class="band">Cloning</span>,  <span class="band">Autumn Pool</span>); Pittsburgh - Club Cafe; 19.13 USD</li>
+<li><span class="datum">20.09.2018</span>	<span class="band">Public Service Broadcasting</span>; New York City - Intrepid Museum; 25 USD</li>
+<li><span class="datum">21.09.2018</span>	<span class="band">Emma Ruth Rundle</span> (Support <span class="band">Jaye Jayle</span>); New York City - Saint Vitus; 20 USD</li>
+<li><span class="datum">24.09.2018</span>	<span class="band">Emma Ruth Rundle</span> (Support <span class="band">Jaye Jayle</span>); Pittsburgh - Club Cafe; 16.58 USD</li>
 </ul>
 
 
