--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -13,10 +13,10 @@
 
 <h1>Juggling in Pittsburgh</h1>
 
-<p>Where to juggle in Pittsburgh (last updated 2018-09-30):</p>
+<p>Where to juggle in Pittsburgh (last updated 2019-03-11):</p>
 <ul style="">
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
-    Meeting Sundays 3-5pm and Thursdays evening on or near the CMU campus. In nice summer weather, Thursday meetings are typically outside on the cut in front of Purnell and Sunday meetings are on Schenley Plaza in front of the Carnegie Library; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the midweek meeting is in a changing location on campus. Growing group of students and nonstudents. See news section on the website or join mailing list for location announcements and short-term updates. <br />
+    Meeting Sundays 3-5pm and Wednesday 5-7pm on or near the CMU campus. In nice summer weather, Thursday meetings are typically outside on the cut in front of Purnell and Sunday meetings are on Schenley Plaza in front of the Carnegie Library; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the midweek meeting is in a changing location on campus. Growing group of students and nonstudents. See news section on the website or join mailing list for location announcements and short-term updates. <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
     </li>
     <li><strong>Pittsburgh Show Offs</strong><br />
@@ -31,7 +31,9 @@
         Jugglers meeting about 45min outside Pittsburgh in Baden, PA (Villa St. Joseph, Heritage Hall). Small group meeting regularly Sundays 3-5:30pm. Organizers of the now defunct <a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>.<br />
         <a href="http://www.allinjest.com/jugglingfestclub.html">website</a>, <a href="http://www.openstreetmap.org/?mlat=40.65079&amp;mlon=-80.23315&amp;zoom=12&amp;layers=M">map</a>
         </li>
-        <li><strong>Other circusy meetings</strong><br /> <a href="https://www.facebook.com/thickbikes/events">THICK bikes</a> organizes a weekly unicycling meeting at the South Side near the Hoffbraeuhaus, Friday 6-8pmi (indoor alternative in the winter). <a href="https://www.facebook.com/groups/79699399846/">Slacklining</a> and <a href="https://www.facebook.com/groups/1451145225119221/">Acrobatics/AcroYoga</a> tend to happen on Sunday afternoon in Schenley Plaza; the <a href="https://www.facebook.com/groups/1027661053915924/">Pittsburgh Flow Collective</a> meets in the evening nearby in Schenley Park. Aerial classes are offered by <a href="">Iron City Circus</a> and <a href="http://www.pittsburghaerialsilks.com/">Pittsburgh Aerial Silks</a>. The <a href="https://www.facebook.com/pghcircusarts/">Pittsburgh Circus Arts Collaborative</a> offers performances...</li>
+        <li><strong>Other circusy meetings</strong><br /> 
+            Members of the Pitt community and the <a href="https://www.facebook.com/groups/1027661053915924/">Pittsburgh Flow Collective</a> used to meet somewhat regularly on Sunday evenings and now are back to semi-regular meetings Tuesday 7pm in Posvar Hall (check the facebook page for updates).
+            <a href="https://www.facebook.com/thickbikes/events">THICK bikes</a> organizes a weekly unicycling meeting at the South Side near the Hoffbraeuhaus, Friday 6-8pmi (indoor alternative in the winter). <a href="https://www.facebook.com/groups/79699399846/">Slacklining</a> and <a href="https://www.facebook.com/groups/1451145225119221/">Acrobatics/AcroYoga</a> tend to happen on Sunday afternoon in Schenley Plaza. Aerial classes are offered by <a href="">Iron City Circus</a> and <a href="http://www.pittsburghaerialsilks.com/">Pittsburgh Aerial Silks</a>. The <a href="https://www.facebook.com/pghcircusarts/">Pittsburgh Circus Arts Collaborative</a> offers performances...</li>
 </ul>
 <p>
 If you know other regular meetings, let me know about it (mail: kaestner (at) cmu.edu).
@@ -151,15 +153,19 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">07.07.2018 - 15.07.2018</span>  <span class="where">New Florence, PA</span> (<a href="http://bit.ly/passoutpa">Passout Pennsylvania 2018</a>)</li>
     <li><span class="datum">28.07.2018 - 05.08.2018</span>  <span class="where">S. Miguel, Azores</span> (<a href="http://ejc2018.org/">ECJ 2018</a>)</li>
     <li><span class="datum">29.09.2016</span>  <span class="where">Cleveland, OH</span> (<a href="www.caseclevelandcircus.com/">Cleveland Circus</a>)</li>
+    <li><span class="datum">05.10.2018 - 07.10.2018</span>  <span class="where">Philadelphia, PA</span> (<a href="http://www.phillyjugglers.com/philly-fest">Philly Fest</a>)</li>
+    <li><span class="datum">26.10.2018 - 28.10.2018</span>  <span class="where">Pittsburgh, PA</span> (<a href="http://bit.ly/fluggleburgh">FluggleBurgh</a>)</li>
+    <li><span class="datum">27.12.2018 - 03.01.2019</span>  <span class="where">Krelingen</span> (Pass-Out)</li>
+    <li><span class="datum">25.01.2019 - 27.01.2019</span>  <span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals">40th Annual Groundhog Day Jugglers Festival</a>)</li>
+    <li><span class="datum">08.02.2019 - 10.02.2019</span>  <span class="where">St. Paul, MI</span> (<a href="http://mondofest.org/">Mondo XXX Festival</a>)</li>
+    <li><span class="datum">01.03.2018 - 03.03.2018</span>  <span class="where">Lansford, PA</span> (<a href="http://poconojugglecircusartsfest.webstarts.com/">Pocono Juggling Festival 2019</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">05.10.2018 - 07.10.2018</span>  <span class="where">Philadelphia, PA</span> (<a href="http://www.phillyjugglers.com/philly-fest">Philly Fest</a>)</li>
-    <li><span class="datum">26.10.2018 - 28.10.2018</span>  <span class="where">Pittsburgh, PA</span> (<a href="http://bit.ly/fluggleburgh">FluggleBurgh</a>)</li>
-    <li><span class="datum">27.12.2018 - 03.01.2019</span>  <span class="where">Krelingen</span> (Pass-Out)</li>
     <li><span class="datum">03.08.2019 - 11.08.2019</span>  <span class="where">Newark, UK</span> (<a href="http://ejc2019.org/">ECJ 2019</a>)</li>
+    <li><span class="datum">01.11.2019 - 03.11.2019</span>  <span class="where">Pittsburgh, PA</span> (<a href="http://bit.ly/fluggleburgh">FluggleBurgh</a>)</li>
 </ul>
 
 <h1>Misc</h1>
