update web page

--- a/src/main/site/concerts.xhtml
+++ b/src/main/site/concerts.xhtml
@@ -576,6 +576,17 @@
 <li><span class="datum">20.09.2018</span>	<span class="band">Public Service Broadcasting</span>; New York City - Intrepid Museum; 25 USD</li>
 <li><span class="datum">21.09.2018</span>	<span class="band">Emma Ruth Rundle</span> (Support <span class="band">Jaye Jayle</span>); New York City - Saint Vitus; 20 USD</li>
 <li><span class="datum">24.09.2018</span>	<span class="band">Emma Ruth Rundle</span> (Support <span class="band">Jaye Jayle</span>); Pittsburgh - Club Cafe; 16.58 USD</li>
+<li><span class="datum">25.11.2018</span>	<span class="band">Rüfüs Du Sol</span> (Support <span class="band">Cubicolor</span>, <span class="band">Icarus</span>); New York City - Terminal 5; 44.93 USD</li>
+<li><span class="datum">25.03.2019</span>	<span class="band">Nils Frahm</span>; Pittsburgh - Mr. Smalls; 27.50 USD</li>
+<li><span class="datum">30.03.2019</span>	<span class="band">Nils Frahm</span>; New York City - Brooklyn Steel</li>
+<li><span class="datum">22.05.2019</span>	<span class="band">Mono</span> (Support <span class="band">Emma Ruth Rundle</span>); New York City - Music Hall of Williamsburg; 24.33 USD</li>
+<li><span class="datum">13.06.2019</span>	<span class="band">The National</span> (Support <span class="band">Courtney Barnett</span>); New York City - Prospect Park Bandshell; 70.58 USD</li>
+<li><span class="datum">23.06.2019</span>	<span class="band">Gabriel Kahane</span>; New York City - Roockwood Music Hall</li>
+<li><span class="datum">22.06.2019</span>	<span class="band">Tortoise</span> (Support <span class="band">Emily Wells</span>); New York City - Prospect Park Bandshell; 0 USD</li>
+<li><span class="datum">22.07.2019</span>	<span class="band">Chvrches</span> (Support <span class="band">Charly Bliss</span>); New York City - Radio City Music Hall; 57.95 USD</li>
+<li><span class="datum">22.07.2019</span>	<span class="band">Jesca Hoop</span> (Support <span class="band">Nightlife</span>); New York City - Rough Trade; 15 USD</li>
+<li><span class="datum">24.07.2019</span>	<span class="band">Caroline Rose</span> (Support <span class="band">Zenizen</span>); New York City - Rocks Off; 35.92
+USD</li>
 </ul>
 
 
