--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -13,15 +13,12 @@
 
 <h1>Juggling in Pittsburgh</h1>
 
-<p>Where to juggle in Pittsburgh (last updated 2019-03-11):</p>
+<p><strong>Current meetings obviously not happening during pandemic shutdown</strong></p>
+<p>Where to juggle in Pittsburgh (last updated 2020-05-09):</p>
 <ul style="">
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
     Meeting Sundays 3-5pm and Wednesday 5-7pm on or near the CMU campus. In nice summer weather, Thursday meetings are typically outside on the cut in front of Purnell and Sunday meetings are on Schenley Plaza in front of the Carnegie Library; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the midweek meeting is in a changing location on campus. Growing group of students and nonstudents. See news section on the website or join mailing list for location announcements and short-term updates. <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
-    </li>
-    <li><strong>Pittsburgh Show Offs</strong><br />
-    No longer meeting separately. Now joined with the CMU juggling club on the CMU campus (see above).<!-- in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active, mostly regular meeting of small group. See facebook page for short-term updates. The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm).--> <br />
-    <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a><!--, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>-->
     </li>
     <li><strong>The Steel City Clown Brigade</strong><br />
         Clown troup with lots of children who do also some juggling. Performing frequently in Hospitals and for various events. Meeting in Homestead, PA. See website for meeting times.<br />
@@ -33,7 +30,7 @@
         </li>
         <li><strong>Other circusy meetings</strong><br /> 
             Members of the Pitt community and the <a href="https://www.facebook.com/groups/1027661053915924/">Pittsburgh Flow Collective</a> used to meet somewhat regularly on Sunday evenings and now are back to semi-regular meetings Tuesday 7pm in Posvar Hall (check the facebook page for updates).
-            <a href="https://www.facebook.com/thickbikes/events">THICK bikes</a> organizes a weekly unicycling meeting at the South Side near the Hoffbraeuhaus, Friday 6-8pmi (indoor alternative in the winter). <a href="https://www.facebook.com/groups/79699399846/">Slacklining</a> and <a href="https://www.facebook.com/groups/1451145225119221/">Acrobatics/AcroYoga</a> tend to happen on Sunday afternoon in Schenley Plaza. Aerial classes are offered by <a href="">Iron City Circus</a> and <a href="http://www.pittsburghaerialsilks.com/">Pittsburgh Aerial Silks</a>. The <a href="https://www.facebook.com/pghcircusarts/">Pittsburgh Circus Arts Collaborative</a> offers performances...</li>
+            <a href="https://www.facebook.com/thickbikes/events">THICK bikes</a> organizes a weekly unicycling meeting at the South Side near the Hoffbraeuhaus, Friday 6-8pmi (indoor alternative in the winter). <a href="https://www.facebook.com/groups/79699399846/">Slacklining</a> and <a href="https://www.facebook.com/groups/1451145225119221/">Acrobatics/AcroYoga</a> used to happen on Sunday afternoon in Schenley Plaza. Aerial classes are offered by <a href="">Iron City Circus</a> and <a href="http://www.pittsburghaerialsilks.com/">Pittsburgh Aerial Silks</a>. The <a href="https://www.facebook.com/pghcircusarts/">Pittsburgh Circus Arts Collaborative</a> offers performances...</li>
 </ul>
 <p>
 If you know other regular meetings, let me know about it (mail: kaestner (at) cmu.edu).
@@ -60,6 +57,8 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li>Ames, IA - ISU Juggling and Unicycling Club, 04.12.2013</li>
     <li>Lincoln, NE - Lincoln City Jugglers, 11.11.2015</li>
     <li>Seattle, WA - Cascade Jugglers, 16.11.2016</li>
+    <li>New York City, NY - Carmine Juggling, weekly summer 2019</li>
+    <li>New York City, NY - Bryant Park Juggling, on and off 2018--2019</li>
 </ul>
 <p>(did some passing in all those clubs)</p>
 
@@ -158,14 +157,20 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">27.12.2018 - 03.01.2019</span>  <span class="where">Krelingen</span> (Pass-Out)</li>
     <li><span class="datum">25.01.2019 - 27.01.2019</span>  <span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals">40th Annual Groundhog Day Jugglers Festival</a>)</li>
     <li><span class="datum">08.02.2019 - 10.02.2019</span>  <span class="where">St. Paul, MI</span> (<a href="http://mondofest.org/">Mondo XXX Festival</a>)</li>
-    <li><span class="datum">01.03.2018 - 03.03.2018</span>  <span class="where">Lansford, PA</span> (<a href="http://poconojugglecircusartsfest.webstarts.com/">Pocono Juggling Festival 2019</a>)</li>
+    <li><span class="datum">01.03.2019 - 03.03.2019</span>  <span class="where">Lansford, PA</span> (<a href="http://poconojugglecircusartsfest.webstarts.com/">Pocono Juggling Festival 2019</a>)</li>    
+    <li><span class="datum">05.04.2019 - 07.04.2019</span>  <span class="where">Rochester, NY</span> (<a href="http://ritjuggle.blogspot.com/">The 42th RIT Spring Juggle-In</a>)</li>
+    <li><span class="datum">01.07.2019 - 04.07.2019</span>  <span class="where">Jamestown, CO</span> (Pass-Out)</li>
+    <li><span class="datum">05.07.2019 - 06.07.2019</span>  <span class="where">Boulder, CO</span> (<a href="http://www.boulderjuggling.com/jugglingfestival/">11th Boulder Juggling Festival</a>)</li>
+    <li><span class="datum">03.08.2019 - 11.08.2019</span>  <span class="where">Newark, UK</span> (<a href="http://ejc2019.org/">ECJ 2019</a>)</li>
+    <li><span class="datum">04.10.2019 - 05.10.2019</span>  <span class="where">Philadelphia, PA</span> (<a href="http://www.phillyjugglers.com/philly-fest">Philly Fest</a>)</li>
+    <li><span class="datum">26.10.2019</span>  <span class="where">Cleveland, OH</span> (<a href="http://www.facebook.com/events/531449140730328">Cleveland Circus</a>)</li>
+    <li><span class="datum">01.11.2019 - 03.11.2019</span>  <span class="where">Pittsburgh, PA</span> (<a href="http://bit.ly/fluggleburgh">FluggleBurgh</a>)</li>
+    <li><span class="datum">27.12.2019 - 03.01.2020</span>  <span class="where">Koenigswiesen</span> (Pass-Out)</li>
+    <li><span class="datum">14.02.2020 - 16.02.2020</span>  <span class="where">St. Paul, MI</span> (<a href="http://mondofest.org/">Mondo XXXI Festival</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
-
 <ul>
-    <li><span class="datum">03.08.2019 - 11.08.2019</span>  <span class="where">Newark, UK</span> (<a href="http://ejc2019.org/">ECJ 2019</a>)</li>
-    <li><span class="datum">01.11.2019 - 03.11.2019</span>  <span class="where">Pittsburgh, PA</span> (<a href="http://bit.ly/fluggleburgh">FluggleBurgh</a>)</li>
 </ul>
 
 <h1>Misc</h1>
